--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="pop">Popular</string>
     <string name="top">Top Rated</string>
     <string name="title_movie_detail">Movie Detail</string>
-
+    <string name="title_trailer">Trailers</string>
 </resources>
