--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="top">Top Rated</string>
     <string name="title_movie_detail">Movie Detail</string>
     <string name="title_trailer">Trailers</string>
+    <string name="title_reviews">Reviews</string>
 </resources>
