--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">KICK!</string>
     <string name="pop">Popular</string>
+    <string name="fav">Favorite</string>
     <string name="top">Top Rated</string>
     <string name="title_movie_detail">Movie Detail</string>
     <string name="title_trailer">Trailers</string>
     <string name="title_reviews">Reviews</string>
+    <string name="fav_text">MARK AS FAV</string>
 </resources>
